kube/server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-game-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: online-game-server
  template:
    metadata:
      labels:
        app: online-game-server
    spec:
      containers:
        - name: online-game-server
          image: localhost:5001/online-game-server:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
