kube/server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: online-server
spec:
  selector:
    app: online-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
